# Rubik

./: CMakeLists.txt  Random.cpp  Random.h  main.cpp
Cube/: Cube.cpp  Cube.h  Field.cpp  Field.h  Model3D.cpp  Model3D.h  Side.cpp  Side.h
Cube/Action/: IAction.h  Move.cpp  Move.h  Rotate.cpp  Rotate.h  Scramble.cpp  Scramble.h  Skip.cpp  Skip.h
genetic_algorithm/: CFitness.cpp  CFitness.h  CGene.cpp  CGene.h  CGeneration.cpp  CGeneration.h  genetic_algorithm.cpp  genetic_algorithm.h
